<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">WiFi Access</string>
    <string name="connectionNotifications">Notifications</string>
    <string name="connectionNotificationsEnable">Enable Notifications</string>
    <string name="connectionNotificationsSummary">Receive notifications when you connect to Belgacom Fon</string>
    <string name="connectionNotificationsVibrate">Vibrate</string>
    <string name="connectionNotificationsVibrateSummary">Vibrate when connected</string>
    <string name="connectionAutoEnable">Auto Connect</string>
    <string name="connectionAutoSummary">Automatically connect to any available Belgacom Fon hotspot</string>
    <string name="connectionRingtoneSummary">Set your notification ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="general">Login Configuration</string>
    <string name="label_account">My Account</string>
    <string name="label_settings">Settings</string>
    <string name="label_help">Help</string>
    <string name="label_log_off">Logout</string>
    <string name="label_save">Save</string>
    <string name="label_about">About</string>
    <string name="label_confirm_log_off">Log out of Fon network? </string>
    <string name="btn_log_off">Log out</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_ok">OK</string>
    <string name="label_username">Username:</string>
    <string name="label_password">Password:</string>
    <string name="label_show_password">Show password:</string>
    <string name="label_hint_account">Enter your Belgacom credentials. \nYou will get connected automatically when you find a Belgacom WiFi hotspot. </string>
    <string name="notif_error">Error</string>
    <string name="notif_default_ssid">Belgacom Fon</string>
    <string name="notif_error_100">Login failed</string>
    <string name="notif_error_1024">WISPr not present</string>
    <string name="notif_error_255">Internal error</string>
    <string name="notif_error_not_authorized">Not authorized</string>
    <string name="notif_error_not_such_user">User not found</string>
    <string name="notif_error_not_enough_credit">Not enough credit</string>
    <string name="notif_error_user_not_found">User not found</string>
    <string name="notif_error_user_in_black_list">User has been blacklisted</string>
    <string name="notif_error_unknown">Unknown error</string>
    <string name="notif_error_title">Belgacom Fon error</string>
    <string name="notif_error_text">Error connecting to Belgacom Fon {%s}</string>
    <string name="notif_connected_title">Belgacom Fon</string>
    <string name="notif_connected_text">Connected to %s</string>
    <string name="notif_disconnected_title">Belgacom Fon disconnected</string>
    <string name="notif_disconnected_text">Disconnected from %s</string>
    <string name="notif_available_title">Belgacom Fon available</string>
    <string name="notif_available_text">Tap to connect</string>
    <string name="notif_no_credentials_title">Belgacom Fon credentials</string>
    <string name="notif_no_credentials_text">Set up the username and password you\'ll use to connect with Belgacom Fon</string>
    <string name="html_language_folder">en</string>
    <string name="help_title">Help and support</string>
    <string name="help_text">If you need assistance, please visit <a href="http://corp.fon.com/support/">http://corp.fon.com/support/</a></string>
    <string-array name="help_question_list">
        <item>What is Fon?</item>
        <item>What is a Fon Spot?</item>
        <item>How do I join Fon?</item>
        <item>What is a Fon access pass?</item>
        <item>Are Fon Spots secure?</item>
    </string-array>
</resources>
